Edit Header to correct alignment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,13 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header a {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 20px;
+    text-align: right;
 }
 
 .header div ul {
